--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <h1>Amaan's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr />
-    <a href="./public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
-    <img src="./assets/images/movie-ranking.png" alt="movie" width="400">
-    <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
-    <img src="./assets/images/birthday-invite.png" alt="Birthday" width="400">
+    <a href="./movie-ranking.html"><h3>Movie Ranking Project</h3></a>
+    <img src="./movie-ranking.png" alt="movie" width="400">
+    <a href="./birthday-invite.html"><h3>Birthday Invite Project</h3></a>
+    <img src="./birthday-invite.png" alt="Birthday" width="400">
     <hr />
-    <a href="./public/about.html">About Me</a>  <a href="./public/contact.html"> Contact Me</a>
+    <a href="./about.html">About Me</a>  <a href="./contact.html"> Contact Me</a>
 
 </body>
 </html>
